# roo

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: lint.yml  python.yml
docs/: advanced.md  advanced.rst  conf.py  index.rst  installation.rst  rationale.md  rationale.rst  troubleshooting.md  troubleshooting.rst  usage.md  usage.rst  why.md
src/roo/: console.py  environment.py  hashing.py  installer.py  locker.py  network.py  parsing_utils.py  r_executor.py  resolver.py  user_notifier.py
src/roo/caches/: build_cache.py  source_cache.py  vcs_store.py
src/roo/cli/: __main__.py
src/roo/deptree/: dependencies.py  transforms.py  traverse.py
src/roo/exporters/: exceptions.py
src/roo/files/: rprofile.py
src/roo/parsers/: description.py  lock.py  rproject.py
src/roo/semver/: README.md  __init__.py  patterns.py  version.py  version_constraint.py  version_range.py  version_union.py
src/roo/sources/: dir_package.py  exceptions.py  local_source.py  package_abc.py  remote_source.py  source_abc.py  source_group.py  source_package.py  vcs.py
tests/: conftest.py  test_environment.py  test_hashing.py  test_installer.py  test_locker.py  test_network.py  test_parsing_utils.py  test_r_executor.py  test_resolver.py  test_user_notifier.py
tests/caches/: test_build_cache.py  test_source_cache.py  test_vcs_cache.py
tests/cli/: test_main.py
tests/deptree/: test_dependencies.py
tests/exporters/lock/: test_lock_csv_exporter.py  test_lock_packrat_exporter.py
tests/files/: test_rprofile.py
tests/fixtures/: DESCRIPTION  DESCRIPTION_incorrect_keyword_identified  DESCRIPTION_with_empty_imports  DESCRIPTION_with_split_deps  Info.plist  rproject.toml
tests/fixtures/Rchecker/: DESCRIPTION
tests/fixtures/Rcheckerv2/: DESCRIPTION
tests/fixtures/git/: rproject.toml
tests/fixtures/locker/: rproject.toml
tests/fixtures/locker-2/: rproject.toml
tests/parsers/: rip.csv  test_description.py  test_lock.py  test_rproject.py
tests/semver/: test_main.py  test_parse_constraint.py  test_version.py  test_version_range.py
tests/sources/: test_local_source.py  test_remote_source.py  test_source_group.py
(+19 files in other folders)
